# harnesshack

./: .env.example  .gitignore  BUILD-STATE.md  CLAUDE.md  IDEAS.md  README.md  build-loop.md  debate-log.md  demo-scripts.md  devpost.md  final-plan.md  ideas.md  pyproject.toml  render.yaml  requirements-dev.txt  run.sh  sponsors.md
.github/workflows/: ci.yml
apps/: __init__.py
apps/api/: __init__.py  main.py  requirements.txt
apps/frontend/: package-lock.json  package.json
apps/worker/: __init__.py  agent.py  postmortem.py  requirements.txt
demo_assets/: fallback_postmortem.html  incident_metrics.csv  incident_payload.json
docs/: API-KEYS.md  ARCHITECTURE.md  NO-MOCK-AUDIT.md  SECURITY-AUDIT.md  composio-b7-slack-jira-session.md
libs/: __init__.py  errors.py  logging_config.py  resilience.py  tracing.py
libs/airbyte/: __init__.py
libs/clickhouse/: __init__.py  causal.py  schema.py
libs/composio_actions/: __init__.py  send.py
scripts/: composio_link.py  demo_preflight.py  demo_start.sh  demo_stop.sh  guild_repro.sh  incident_profile.py  load_generator.py  make_incident_csv.py  replay.py  seed_jira_history.py  seed_senso.py  seed_slack_history.py  tracing_glue.py  trigger.py
tests/: conftest.py  test_agent_pipeline.py  test_api.py  test_causal.py  test_choke_point.py  test_guild_session.py  test_incident_csv.py  test_load_generator.py  test_logging_config.py  test_pioneer_clients.py  test_postmortem.py  test_replay.py  test_resilience.py  test_seed_senso.py  test_senso_retrieve.py  test_state_machine.py  test_trigger.py  test_webhook_security.py
(+20 files in other folders)
