[project]
name = "incidentsherpa"
version = "0.1.0"
description = "IncidentSherpa — active incident-commander agent (Harness Engineering Hack 2026)"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["apps/frontend"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
